<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="about">about</string>
    <string name="ilayda_gurbak">ilayda gürbak</string>
    <string name="about_message">Eat veggies and stay hydrated</string>
    <string name="imperial">Imperial</string>
    <string name="count_bmi">CALCULATE</string>
    <string name="bmi_value">Your bmi value is</string>
    <string name="animated_broccoli">Animated Broccoli</string>
    <string name="start_btn">Start</string>
    <string name="stop_btn">Stop</string>
    <string name="underweight">UNDERWEIGHT</string>
    <string name="normal">NORMAL</string>
    <string name="overweight">OVERWEIGHT</string>
    <string name="obese">OBESE</string>
    <string name="invalid_weight">Invalid weight</string>
    <string name="invalid_height">Invalid height</string>
    <string name="kg_weight_value">kg</string>
    <string name="cm_height_value">cm</string>
    <string name="lb_weight_value">lb</string>
    <string name="in_height_value">in</string>
    <string name="my_photo">my_photo</string>
</resources>
