<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   tools:context="ui.MainActivity"
                                                   tools:showIn="@layout/activity_main"
                                                   app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weight_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <EditText
                android:id="@+id/weight_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:textSize="@dimen/font_size_small"
                tools:text="134"
                android:importantForAutofill="no"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/height_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weight_view">

        <EditText
                android:id="@+id/height_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLength="3"
                android:textSize="@dimen/font_size_small"
                android:importantForAutofill="no"
                tools:text=""/>

    </com.google.android.material.textfield.TextInputLayout>

    <Switch
            android:id="@+id/bmi_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_top_margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:textSize="@dimen/font_size_small"
            android:text="@string/imperial"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/height_view"/>

    <Button
            android:id="@+id/btn_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/default_top_margin"
            android:layout_marginEnd="@dimen/margin"
            android:enabled="true"
            android:text="@string/count_bmi"
            android:textSize="@dimen/font_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bmi_switch"/>

    <TextView
            android:id="@+id/bmi_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_top_margin"
            android:gravity="center"
            android:text="@string/bmi_value"
            android:textSize="@dimen/font_size_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_count"/>

    <TextView
            android:id="@+id/bmi_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_top_margin"
            android:freezesText="true"
            android:gravity="center"
            android:textSize="@dimen/font_size_medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bmi_view"
            tools:text="30"/>

    <TextView
            android:id="@+id/bmi_result_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_top_margin"
            android:freezesText="true"
            android:gravity="center"
            android:textSize="@dimen/font_size_big"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bmi_result"
            tools:text="Obesity"/>

</androidx.constraintlayout.widget.ConstraintLayout>
